commit 7: update admin template

--- a/templates/home.html
+++ b/templates/home.html
@@ -71,6 +71,9 @@ https://templatemo.com/tm-569-edu-meeting
                 <a href="{% url "home" %}" class="active">Home</a>
               </li>
               <li>
+                <a href="{% url "statistical_analysis" %}">Administator</a>
+              </li>
+              <li>
                 <a href="{% url "list_academic_years" %}">Academic Years</a>
               </li>
               <li>
