--- a/templates/list_faculties.html
+++ b/templates/list_faculties.html
@@ -78,6 +78,9 @@
                   <a href="{% url "list_academic_years" %}">Academic Years</a>
                 </li>
                 <li>
+                  <a href="{% url "statistical_analysis" %}">Administator</a>
+                </li>
+                <li>
                   <a href="{% url "list_faculties" %}" class="active">Faculties</a>
                 </li>
                 <li class="has-sub">
