--- a/templates/upload.html
+++ b/templates/upload.html
@@ -107,9 +107,12 @@
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
-              <ul class="nav">
+              <ul class="nav">``
                 <li>
                   <a href="{% url "home" %}">Home</a>
+                </li>
+                <li>
+                  <a href="{% url "statistical_analysis" %}">Administator</a>
                 </li>
                 <li>
                   <a href="{% url "list_academic_years" %}">Academic Years</a>
