--- a/templates/upload_success.html
+++ b/templates/upload_success.html
@@ -68,6 +68,9 @@
                   <a href="{% url "home" %}">Home</a>
                 </li>
                 <li>
+                  <a href="{% url "statistical_analysis" %}">Administator</a>
+                </li>
+                <li>
                   <a href="{% url "list_academic_years" %}">Academic Years</a>
                 </li>
                 <li>
