--- a/templates/academic_years_form.html
+++ b/templates/academic_years_form.html
@@ -94,6 +94,9 @@
                   <a href="{% url "home" %}">Home</a>
                 </li>
                 <li>
+                  <a href="{% url "statistical_analysis" %}">Administator</a>
+                </li>
+                <li>
                   <a href="{% url "list_academic_years" %}" class="active">Academic Years</a>
                 </li>
                 <li>
