--- a/templates/faculty_file.html
+++ b/templates/faculty_file.html
@@ -153,12 +153,15 @@ https://templatemo.com/tm-569-edu-meeting
                   <a href="{% url "home" %}">Home</a>
                 </li>
                 <li>
+                  <a href="{% url "statistical_analysis" %}">Administator</a>
+                </li>
+                <li>
                   <a href="{% url "list_academic_years" %}">Academic Years</a>
                 </li>
                 <li>
                   <a href="{% url "list_faculties" %}" class="active">Faculties</a>
                 </li>
-                <<li class="has-sub">
+                <li class="has-sub">
                   <a href="javascript:void(0)">Contributions</a>
                   <ul class="sub-menu">
                     {%for f in faculties%}
