--- a/templates/manage_contributions.html
+++ b/templates/manage_contributions.html
@@ -1,286 +1,143 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="TemplateMo" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
-      rel="stylesheet"
-    />
-
-    <!-- Bootstrap core CSS -->
-    <link
-      href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}" />
-    <link
-      rel="stylesheet"
-      href="{% static 'css/templatemo-edu-meeting.css' %}"
-    />
-    <link rel="stylesheet" href="{% static 'css/owl.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/lightbox.css' %}" />
-
-    <style>
-      body {
-        background-color: #f4f4f4;
-        margin: 0;
-        padding: 0;
-        height: 100vh;
-      }
-      form {
-        background: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        max-width: 700px;
-        margin: auto;
-      }
-      input[type="datetime-local"] {
-        width: 100%;
-        padding: 8px;
-        margin-top: 5px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-        display: inline-block;
-      }
-
-      .header-content {
-        margin: 30px;
-        padding: 10px auto;
-      }
-
-      h2 {
-        text-align: center;
-        color: #fff;
-        margin: 20px 0;
-      }
-      
-      .btn-primary {
-        background-color: #2c2e3d;
-        border-color: #2c2e3d;
-        width: 60%;
-      }
-
-      .btn-primary:hover {
-        background-color: #536881;
-        border-color: #536881;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <nav class="main-nav">
-              <!-- ***** Logo Start ***** -->
-              <a href="{% url "home" %}" class="logo">
-                Edu Meeting
-              </a>
-              <!-- ***** Logo End ***** -->
-              <!-- ***** Menu Start ***** -->
-              <ul class="nav">
-                <li>
-                  <a href="{% url "home" %}">Home</a>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Dashboard - SB Admin</title>
+        <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    </head>
+    <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <!-- Navbar Brand-->
+            <a class="navbar-brand ps-3" href="{% url "home" %}">EDU MEETING</a>
+            <!-- Sidebar Toggle-->
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                <div class="input-group">
+                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
+            <!-- Navbar-->
+            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#!">Settings</a></li>
+                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="{% url 'logout'%}">Logout</a></li>
+                    </ul>
                 </li>
-                <li>
-                  <a href="{% url "list_academic_years" %}" class="active">Academic Years</a>
-                </li>
-                <li>
-                  <a href="{% url "list_faculties" %}">Faculties</a>
-                </li>
-                <li class="has-sub">
-                  <a href="javascript:void(0)">Contributions</a>
-                  <ul class="sub-menu">
-                    {%for f in faculties%}
-                    <li>
-                        <a href="{%url 'faculty_files' f.id%}">{{f.name}}</a>
-                    </li>
-                    {%endfor%}
-                    <li>
-                        <a href="{%url 'show_contributions'%}">Download Contributions</a>
-                    </li>
-                    <li>
-                      <a href="{%url 'my_contributions'%}">View My</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="{% url 'file_upload'%}">Upload Contributions</a>
-                </li>
-                {% if user.is_authenticated %}
-                <!-- Display the form or user-specific content -->
-                <li >
-                  <a href="{%url 'profile' %}">hello {{request.user.username}}</a>
-                </li>
-                <li>
-                  <a href="{% url 'logout'%}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                  <a href="{% url 'login' %}">Login</a>
-                </li>
-                {% endif %}
-              </ul>
-              <a class='menu-trigger'>
-                <span>Menu</span>
-              </a>
-              <!-- ***** Menu End ***** -->
-            </nav>
-          </div>
+            </ul>
+        </nav>
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <div class="sb-sidenav-menu-heading">Statiscals</div>
+                            <a class="nav-link" href="{% url "statistical_analysis" %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Statiscal Analysis
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Managements</div>
+                            <a class="nav-link" href="{% url "role_list" %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                                Roles Management
+                            </a>
+                            <a class="nav-link" href="{% url "account_list" %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                Accounts Management
+                            </a>
+                            <a class="nav-link" href="{% url "manage_contributions" %}">
+                              <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                              Contributions Approval
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sb-sidenav-footer">
+                        <div class="small">Logged in as:</div>
+                        {{request.user.username}}
+                    </div>
+                </nav>
+            </div>
+            <div id="layoutSidenav_content">
+                <main>
+                    <div class="container-fluid px-4">
+                        <h1 class="mt-4">List of Contributions</h1>
+                        <div class="card mb-4">
+                            <div class="card-body">
+                              <form method="post" enctype="">
+                                <table class="table mt-3">
+                                  <thead class="thead-dark">
+                                    <tr>
+                                      <th scope="col">Student Name</th>
+                                      <th scope="col">Article Title</th>
+                                      <th scope="col">Submission Date</th>
+                                      <th scope="col">Status</th>
+                                      <th scope="col">Action</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    {% for contribution in contributions %}
+                                    <tr>
+                                        <td>
+                                          {% for user in contribution.user.all %}
+                                              {{ user.fullname }}
+                                              {% if not forloop.last %}, {% endif %}
+                                          {% endfor %}
+                                        </td>
+                                        <td>{{ contribution.title }}</td>
+                                        <td>{{ contribution.createAt }}</td>
+                                        <td>
+                                            {% if contribution.status %}
+                                                Approved
+                                            {% else %}
+                                                Waiting
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                          {% if not contribution.status %}
+                                              <a href="{% url 'approve_contribution' contribution.id %}?approve=app" class="btn btn-success">Approve</a>
+                                          {% else %}
+                                              <a href="{% url 'approve_contribution' contribution.id %}?approve=dis" class="btn btn-danger">Disapprove</a>
+                                          {% endif %}
+                                        </td>                  
+                                    </tr>
+                                    {% endfor %}
+                                  </tbody>
+                                </table>
+                              </form>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid px-4">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                            <div>
+                                <a href="#">Privacy Policy</a>
+                                &middot;
+                                <a href="#">Terms &amp; Conditions</a>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </div>
-      </div>
-    </header>
-    <!-- ***** Header Area End ***** -->
-
-    <section class="apply-now" id="apply">
-        <div class="container">
-          <h2>Feedback Manage</h2>
-          <form method="post" enctype="">
-            <table class="table mt-3">
-              <thead class="thead-dark">
-                <tr>
-                  <th scope="col">Student Name</th>
-                  <th scope="col">Article Title</th>
-                  <th scope="col">Submission Date</th>
-                  <th scope="col">Status</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for contribution in contributions %}
-                <tr>
-                    <td>
-                      {% for user in contribution.user.all %}
-                          {{ user.fullname }}
-                          {% if not forloop.last %}, {% endif %}
-                      {% endfor %}
-                    </td>
-                    <td>{{ contribution.title }}</td>
-                    <td>{{ contribution.createAt }}</td>
-                    <td>
-                        {% if contribution.status %}
-                            Approved
-                        {% else %}
-                            Waiting
-                        {% endif %}
-                    </td>
-                    <td>
-                      {% if not contribution.status %}
-                          <a href="{% url 'approve_contribution' contribution.id %}?approve=app" class="btn btn-success">Approve</a>
-                      {% else %}
-                          <a href="{% url 'approve_contribution' contribution.id %}?approve=dis" class="btn btn-danger">Disapprove</a>
-                      {% endif %}
-                    </td>                  
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </form>
-        </div>
-      </section>
-  
-
-    
-    <section class="contact-us" id="contact">
-      <div class="footer">
-        <p>
-          Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-          <br />
-          Design:
-          <a
-            href="https://templatemo.com"
-            target="_parent"
-            title="free css templates"
-            >TemplateMo</a
-          >
-          <br />
-          Distibuted By:
-          <a
-            href="https://themewagon.com"
-            target="_blank"
-            title="Build Better UI, Faster"
-            >ThemeWagon</a
-          >
-        </p>
-      </div>
-    </section>
-
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <script src="{%static 'js/isotope.min.js' %}"></script>
-    <script src="{%static 'js/owl-carousel.js' %}"></script>
-    <script src="{%static 'js/lightbox.js' %}"></script>
-    <script src="{%static 'js/tabs.js' %}"></script>
-    <script src="{%static 'js/video.js' %}"></script>
-    <script src="{%static 'js/slick-slider.js' %}"></script>
-    <script src="{%static 'js/custom.js' %}"></script>
-    <script>
-      //according to loftblog tut
-      $(".nav li:first").addClass("active");
-
-      var showSection = function showSection(section, isAnimate) {
-        var direction = section.replace(/#/, ""),
-          reqSection = $(".section").filter(
-            '[data-section="' + direction + '"]'
-          ),
-          reqSectionPos = reqSection.offset().top - 0;
-
-        if (isAnimate) {
-          $("body, html").animate(
-            {
-              scrollTop: reqSectionPos,
-            },
-            800
-          );
-        } else {
-          $("body, html").scrollTop(reqSectionPos);
-        }
-      };
-
-      var checkSection = function checkSection() {
-        $(".section").each(function () {
-          var $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-          if (topEdge < wScroll && bottomEdge > wScroll) {
-            var currentId = $this.data("section"),
-              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-            reqLink
-              .closest("li")
-              .addClass("active")
-              .siblings()
-              .removeClass("active");
-          }
-        });
-      };
-
-      $(".main-menu, .responsive-menu, .scroll-to-section").on(
-        "click",
-        "a",
-        function (e) {
-          e.preventDefault();
-          showSection($(this).attr("href"), true);
-        }
-      );
-
-      $(window).scroll(function () {
-        checkSection();
-      });
-    </script>
-  </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+    </body>
 </html>
+     
