--- a/templates/show_contribution.html
+++ b/templates/show_contribution.html
@@ -75,6 +75,9 @@
                   <a href="{% url "home" %}">Home</a>
                 </li>
                 <li>
+                  <a href="{% url "statistical_analysis" %}">Administator</a>
+                </li>
+                <li>
                   <a href="{% url "list_academic_years" %}">Academic Years</a>
                 </li>
                 <li>
