commit 8: update academic and faculty template

--- a/templates/listAccount.html
+++ b/templates/listAccount.html
@@ -57,9 +57,18 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Accounts Management
                             </a>
+                            <div class="sb-sidenav-menu-heading">Contributions, Years and Faculties</div>
                             <a class="nav-link" href="{% url "manage_contributions" %}">
-                              <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                              Contributions Approval
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                                Contributions Approval
+                            </a>
+                            <a class="nav-link" href="{% url "list_academic_years" %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                Academic Years
+                            </a>
+                            <a class="nav-link" href="{% url "list_faculties" %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                Faculties
                             </a>
                         </div>
                     </div>
