--- a/templates/show_contribution.html
+++ b/templates/show_contribution.html
@@ -154,7 +154,7 @@
                       </div>
                       {% else %}
                       <div>
-                        <p>File does not exist</p>
+                        <p>Document files are empty</p>
                       </div>
                       {% endif %}
                       {% if file.img %}
@@ -163,7 +163,7 @@
                       </div>
                       {% else %}
                       <div>
-                        <p>File does not exist</p>
+                        <p>Image files are empty</p>
                       </div>
                       {% endif %}
                     </td>
