--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -128,11 +128,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Accounts Management
                             </a>
-                            <div class="sb-sidenav-menu-heading">Contributions, Years and Faculties</div>
-                            <a class="nav-link" href="{% url "manage_contributions" %}">
-                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Contributions Approval
-                            </a>
+                            <div class="sb-sidenav-menu-heading">Academic Years and Faculties</div>
                             <a class="nav-link" href="{% url "list_academic_years" %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Academic Years
