--- a/templates/manage_contributions.html
+++ b/templates/manage_contributions.html
@@ -43,6 +43,7 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
+                            <div class="sb-sidenav-menu-heading">Contributions Management</div>
                             <a class="nav-link" href="{% url "manage_contributions" %}">
                               <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                               Contributions Approval
