--- a/templates/role_list.html
+++ b/templates/role_list.html
@@ -57,11 +57,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Accounts Management
                             </a>
-                            <div class="sb-sidenav-menu-heading">Contributions, Years and Faculties</div>
-                            <a class="nav-link" href="{% url "manage_contributions" %}">
-                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Contributions Approval
-                            </a>
+                            <div class="sb-sidenav-menu-heading">Academic Years and Faculties</div>
                             <a class="nav-link" href="{% url "list_academic_years" %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Academic Years
@@ -97,7 +93,7 @@
                                   <tr>
                                     <td>{{ role.name }}</td>
                                     <td>
-                                      <a class="btn btn-danger" href="{% url 'delete_role' role.id %}">
+                                      <a class="btn btn-danger" href="{% url 'delete_role' role.id %}" onclick="return confirm('Are you sure you want to delete?');">
                                         Delete
                                       </a>
                                     </td>
