Update Enroll Template And Functions

--- a/templates/faculties_form.html
+++ b/templates/faculties_form.html
@@ -167,7 +167,7 @@
                                         <label for="description">Description:</label>
                                         <textarea id="description" name="description" required>{{ faculty.description }}</textarea><br><br>
                                     </div>
-                                    <div>
+                                    <!-- <div>
                                         <label for="academicYear">Academic Year:</label>
                                         <select id="academicYear" name="academicYear" required>
                                             {% for year in academic_years %}
@@ -176,7 +176,7 @@
                                                 </option>
                                             {% endfor %}
                                         </select><br><br>
-                                    </div>
+                                    </div> -->
                                     <div class="text-center">
                                         <!-- Center the button -->
                                         {% if page == "create" %}
