--- a/templates/header.html
+++ b/templates/header.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-569-edu-meeting
                     {% endif %}
                     {% if is_student %}
                     <li>
-                      <a href="{% url 'my_contributions' %}">View My</a>
+                      <a href="{% url 'my_contributions' %}">View My Contributions</a>
                     </li>
                     {% endif %}
                 </ul>
