--- a/static/css/templatemo-edu-meeting.css
+++ b/static/css/templatemo-edu-meeting.css
@@ -402,8 +402,9 @@ header
   display: block;
   background: #f7f7f7;
   color: #2a2a2a!important;
-  padding-left: 20px;
+  padding: 0 10px;
   height: 40px;
+  width: 220px;
   line-height: 40px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -418,7 +419,7 @@ header
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
   color: #f5a425!important;
-  padding-left: 25px;
+  padding-left: 15px;
 }
 
 .header-area .main-nav .nav li.has-sub ul li a:hover:before {
