--- a/templates/register.html
+++ b/templates/register.html
@@ -25,7 +25,7 @@
     .form-box{
         position: relative;
         width: 400px;
-        height: 450px;
+        max-height: 100%;
         background: transparent;
         border: 2px solid rgba(46,42,42,0.5);
         border-radius: 20px;
@@ -102,16 +102,6 @@
     }
     .register p a:hover{
         text-decoration: underline;
-    }
-
-    .form-value-container {
-        max-height: 200px; 
-        overflow-y: auto; 
-        scrollbar-width: none;
-    }
-    
-    .form-value-container::-webkit-scrollbar {
-        display: none; 
     }
 </style>
 <body>
