--- a/templates/show_contribution.html
+++ b/templates/show_contribution.html
@@ -58,7 +58,7 @@
                       </div>
                       {% else %}
                       <div>
-                        <p>Document files are empty</p>
+                        <p>Do not have document files</p>
                       </div>
                       {% endif %}
                       {% if file.img %}
@@ -67,7 +67,7 @@
                       </div>
                       {% else %}
                       <div>
-                        <p>Image files are empty</p>
+                        <p>Do not have image files</p>
                       </div>
                       {% endif %}
                     </td>
