--- a/templates/contributions_detail.html
+++ b/templates/contributions_detail.html
@@ -34,10 +34,6 @@
         text-align: center;
       }
 
-      .file-upload-form {
-        margin-bottom: 20px;
-      }
-
       .truncated {
         white-space: nowrap;
         overflow: hidden;
@@ -58,6 +54,17 @@
         justify-content: center;
       }
 
+      .container .btn-primary {
+        background-color: #2c2e3d;
+        border-color: #2c2e3d;
+        margin-top: 10px;
+      }
+
+      .container .btn-primary:hover {
+        background-color: #536881;
+        border-color: #536881;
+      }
+
       .navigation-container {
         background-color: #f4f4f4;
         border: 1px solid #ddd;
@@ -67,10 +74,6 @@
         box-sizing: border-box;
         padding: 20px;
         width: 100%;
-      }
-
-      .navigation-options {
-        /* Add styling for navigation options */
       }
     </style>
 
@@ -89,27 +92,24 @@
                 <h5>Content: {{ contribution.content }}</h5>
                 <p>
                 </p>
-
                 <form class="file-upload-form" enctype="multipart/form-data">
                   {% for file in contribution.files.all %}
                   <div class="form-group">
                     {% if file.word %}
                     <div class="content">
                       <h5 class="truncated">Document: <a href="{{ file.word.url }}">{{ file.word.name }}</a></h5>
-                      {% comment %} <a href=""><i class="fas fa-trash-alt"></i></a> {% endcomment %}
                     </div>
                     {% else %}
-                    <h5>Document: <span style="font-size: 15px;">File does not exist</span></h5>
+                    <h5>Document: Do not have document files</h5>
                     {% endif %} {% if file.img %}
                     <div class="content">
                       <h5 class="truncated">Image: <a href="{{ file.img.url }}">{{ file.img.name }}</a></h5>
                     </div>
                     {% else %}
-                    <h5>Image: <span style="font-size: 15px;">File does not exist</span></h5>
+                    <h5>Image: Do not have image files</h5>
                     {% endif %}
                   </div>
                   {% endfor %}
-
                   {% if can_update %}
                     <a href="{% url 'update_contribution' pk=contribution.id %}" type="submit" class="btn btn-primary" >
                       Update contribution
@@ -119,7 +119,6 @@
               </div>
             </div>
           </div>
-
           <!-- Navigation Container -->
           <div class="col-md-4 mx-auto">
             <div class="navigation-container">
