--- a/templates/register.html
+++ b/templates/register.html
@@ -33,7 +33,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
+        
     }
     h2{
         font-size: 2em;
@@ -139,7 +139,7 @@
                         </div>
                         <div style="margin-bottom: 25px">
                             <label for="id_faculty">Faculty</label>
-                              <select name="faculty" id="id_faculty" required>
+                              <select name="faculty" id="id_faculty">
                               <option value="" >--Please choose an option--</option>
                                   {% for faculty in faculties %}
                               <option value="{{ faculty.id }}" >{{ faculty.name }} </option>
